--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-twitter-streaming-api": "^1.1"
+        "fennb/phirehose": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -21,7 +21,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "vendor/fennb/phirehose/lib"
         ],
         "psr-4": {
             "App\\": "app/"
